componentização e refatoração para uma melhor manutenção futura

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 :root {
-    --width-container: 556px;
+    --max-container: 556px;
+    --min-container: 400px;
 }
 
 body {
